--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,11 +2,12 @@
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
-  "type": "module",  "scripts": {
+  "type": "module",
+  "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "build:extension": "vite build && tsc scripts/build-extension.ts --outDir dist/scripts && node dist/scripts/build-extension.js",
+    "build:extension": "vite build && node scripts/build-extension.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -76,6 +77,7 @@
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
