--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -5,18 +5,29 @@
   "description": "A comprehensive trading dashboard for market analysis and portfolio management",  "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "icons/icon16.png",
-      "32": "icons/icon32.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+      "16": "icons/favicon-16x16.png",
+      "32": "icons/favicon-32x32.png",
+      "48": "icons/android-chrome-192x192.png",
+      "128": "icons/android-chrome-512x512.png"
     }
   },
   "icons": {
-    "16": "icons/icon16.png",
-    "32": "icons/icon32.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icons/favicon-16x16.png",
+    "32": "icons/favicon-32x32.png",
+    "48": "icons/android-chrome-192x192.png",
+    "128": "icons/android-chrome-512x512.png"
   },
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "icons/apple-touch-icon.png",
+        "icons/android-chrome-192x192.png",
+        "icons/android-chrome-512x512.png",
+        "icons/favicon.ico"
+      ],
+      "matches": ["<all_urls>"]
+    }
+  ],
   "permissions": [
     "storage",
     "identity"
