--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -36,8 +36,7 @@
     "http://localhost:8000/*"
   ],
   "background": {
-    "service_worker": "background.js",
-    "type": "module"
+    "service_worker": "background.js"
   },
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'"
