Revert "Refactor database initialization, update popup styles, and adjust extension configuration"
This reverts commit f374c09a432b1693f807572fde653ed4f12ef757.

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -36,7 +36,8 @@
     "http://localhost:8000/*"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'"
