feat: Add settings page for Kite API configuration and connection management
- Updated manifest.json to include host permissions for Kite API.
- Modified App.tsx to include a new route for the Settings page.
- Enhanced PopupMenu component to display Kite API connection status.
- Created Settings page for managing Kite API credentials and connection status.
- Implemented kiteService for handling Kite API interactions, including authentication and order management.
- Added error handling and user feedback for configuration and connection processes.

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -27,14 +27,14 @@
       ],
       "matches": ["<all_urls>"]
     }
-  ],
-  "permissions": [
+  ],  "permissions": [
     "storage",
     "tabs",
     "identity"
   ],
   "host_permissions": [
-    "http://localhost:8000/*"
+    "http://localhost:8000/*",
+    "https://api.kite.trade/*"
   ],
   "background": {
     "service_worker": "background.js",
