--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,7 +7,7 @@ aiofiles==23.2.1
 python-multipart==0.0.6
 pyinstaller==5.13.2
 SQLAlchemy==2.0.20
-pandas>=2.0.0
-numpy>=1.25.0
-yfinance>=0.2.28
-ta>=0.10.2  # Technical Analysis library
+#pandas>=2.0.0
+#numpy>=1.25.0
+#yfinance>=0.2.28
+#ta>=0.10.2  # Technical Analysis library
